--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.udb.dsm.helpets">
-
-    <!--  Permisos de internet  -->
+    <!-- Permisos de internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,14 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelPets">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".SplashScreen"
             android:theme="@style/Theme.HelPets.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.HelPets.NoActionBar">
         </activity>
     </application>
 
