--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelPets">
-        <activity
-            android:name=".SplashScreen"
-            android:theme="@style/Theme.HelPets.NoActionBar">
+        <activity android:name=".UserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +19,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".SplashScreen"
+            android:theme="@style/Theme.HelPets.NoActionBar">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.HelPets.NoActionBar">
+
         </activity>
     </application>
 
