--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ plugins {
 //Firebase
 apply plugin: 'com.google.gms.google-services'
 
+android.defaultConfig.vectorDrawables.useSupportLibrary = true
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -35,6 +37,10 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.firebase:firebase-analytics'
+
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     // CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
