--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:largeHeap="true"
 
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelPets">
-        <activity android:name=".UserActivity">
+        <activity
+            android:name=".UserActivity"
+            android:theme="@style/Theme.HelPets.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
