--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,18 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:hardwareAccelerated="true"
-        android:largeHeap="true"
-
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelPets">
+        <activity
+            android:name=".EditUserActivity"
+            android:theme="@style/Theme.HelPets.NoActionBar"
+            />
         <activity
             android:name=".UserActivity"
             android:theme="@style/Theme.HelPets.NoActionBar">
@@ -25,14 +28,11 @@
         </activity>
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/Theme.HelPets.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.HelPets.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HelPets.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.HelPets.NoActionBar" />
     </application>
 
 </manifest>
