--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     // Material Design
     implementation 'com.google.android.material:material:1.3.0'
 
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
