--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelPets">
         <activity
-            android:name=".EditUserActivity"
-            android:theme="@style/Theme.HelPets.NoActionBar"
-            />
+            android:name="EditUserActivity"
+            android:theme="@style/Theme.HelPets.NoActionBar" />
         <activity
             android:name=".UserActivity"
             android:theme="@style/Theme.HelPets.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,6 +30,12 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/Theme.HelPets.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/Theme.HelPets.NoActionBar" />
+        <activity
+            android:name=".SignupActivity"
             android:theme="@style/Theme.HelPets.NoActionBar" />
     </application>
 
