Agregando actividad recuperacion de contrasena

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity
             android:name=".SignupActivity"
             android:theme="@style/Theme.HelPets.NoActionBar" />
+        <activity
+            android:name=".RecoveryActivity"
+            android:theme="@style/Theme.HelPets.NoActionBar" />
     </application>
 
 </manifest>
