--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,12 @@
         </activity>
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/Theme.HelPets.NoActionBar" />
+            android:theme="@style/Theme.HelPets.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -31,10 +36,6 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.HelPets.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".SignupActivity"
