--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HelPets.NoActionBar" />
+            android:theme="@style/Theme.HelPets.NoActionBar">
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.HelPets.NoActionBar">
