--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.udb.dsm.helpets">
     <!-- Permisos de internet -->
     <uses-permission android:name="android.permission.INTERNET" />
-   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,30 +16,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelPets">
         <activity
-            android:name="EditUserActivity"
+            android:name=".PostActivity"
+            android:theme="@style/Theme.HelPets.NoActionBar" />
+        <activity
+            android:name=".EditUserActivity"
             android:theme="@style/Theme.HelPets.NoActionBar" />
         <activity
             android:name=".UserActivity"
-            android:theme="@style/Theme.HelPets.NoActionBar">
-
-     </activity>
+            android:theme="@style/Theme.HelPets.NoActionBar" />
         <activity
             android:name=".SplashScreen"
             android:theme="@style/Theme.HelPets.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.HelPets.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.HelPets.NoActionBar" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/Theme.HelPets.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.HelPets.NoActionBar" />
         <activity
             android:name=".SignupActivity"
             android:theme="@style/Theme.HelPets.NoActionBar" />
@@ -48,11 +48,14 @@
             android:theme="@style/Theme.HelPets.NoActionBar" />
         <activity
             android:name=".CreatePostActivity"
-            android:theme="@style/Theme.HelPets.NoActionBar" >
-            <!--<intent-filter>
+            android:theme="@style/Theme.HelPets.NoActionBar">
+
+            <!--
+        <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>-->
+        </intent-filter>
+            -->
         </activity>
     </application>
 
